--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,15 @@
   padding: 2rem;
   text-align: center;
 }
+
+#form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#button{
+  text-align: center;
+  margin-top: 4%;
+}
