--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,18 @@
   }
 }
 
+.circle {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.circle:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #fff transparent #fff transparent
+}
