--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,11 @@
   margin-top: 4%;
 }
 
+#button:hover {
+  background-color: white;
+  color: black;
+}
+
 .lds-dual-ring {
   display: inline-block;
   width: 80px;
